--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ HTML
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code With <dada-k> | Portfolio</title>
+    <title>Code With Dada-K | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
 
     <nav class="navbar">
-        <div class="logo">CODE<span>WITH</span>dada-k</div>
+        <div class="logo">CODE<span>WITH</span>DADA-K</div>
         <div class="nav-right">
             <button id="theme-btn">Theme: Tokyo Night</button>
             <ul class="nav-links">
@@ -73,7 +73,7 @@ HTML
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
-        <p>© 2025 Code With dada-k. All Rights Reserved.</p>
+        <p>© 2025 Code With Dada-K. All Rights Reserved.</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -81,3 +81,4 @@ HTML
     <script src="script.js"></script>
 </body>
 </html>
+
