Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ HTML
 <body>
 
     <nav class="navbar">
-        <div class="logo">CODE<span>WITH</span>DADA-K</div>
+        <div class="logo">"Black White Minimalist Initials Monogram Jewelry Logo.png" alt="Hero Illustration"</div>
         <div class="nav-right">
             <button id="theme-btn">Theme: Tokyo Night</button>
             <ul class="nav-links">
@@ -81,4 +81,5 @@ HTML
     <script src="script.js"></script>
 </body>
 </html>
+
 
