--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ HTML
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code With Dada-K | Portfolio</title>
+    <title>Code With <dada-k> | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
 
     <nav class="navbar">
-        <div class="logo">"Black White Minimalist Initials Monogram Jewelry Logo.png" alt="Hero Illustration"</div>
+        <div class="logo"><img src="Black White Minimalist Initials Monogram Jewelry Logo.png" alt="Hero Illustration"></div>
         <div class="nav-right">
             <button id="theme-btn">Theme: Tokyo Night</button>
             <ul class="nav-links">
@@ -81,5 +81,3 @@ HTML
     <script src="script.js"></script>
 </body>
 </html>
-
-
